// This file has been automatically generated for use by
// the idlGen plugin, from mu service definitions.
// Read more at: https://higherkindness.github.io/mu/scala/

syntax = "proto3";

package foo.bar;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_outer_classname = "Quickstart";

message HelloRequest {
  string arg1 = 1;
  string arg2 = 2;
  repeated string arg3 = 3;
}

message HelloResponse {
  string arg1 = 1;
  string arg2 = 2;
  repeated string arg3 = 3;
}

service ProtoGreeter {
  rpc SayHelloProto (HelloRequest) returns (HelloResponse);
  rpc SayNothingProto (google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc LotsOfRepliesProto (HelloRequest) returns (stream HelloResponse);
  rpc LotsOfGreetingsProto (stream HelloRequest) returns (HelloResponse);
  rpc BidiHelloProto (stream HelloRequest) returns (stream HelloResponse);
  rpc BidiHelloFs2Proto (stream HelloRequest) returns (stream HelloResponse);
}
